storing form inputs in a file and reading them

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,8 +6,13 @@
 
 <p>You submitted the following data:</p>
 <table>
-<tbody><tr><td>Phrase:</td><td>{{ the_phrase }}</td></tr>
-<tr><td>Letters:</td><td>{{ the_letters }}</td></tr>
+<tbody>
+    <tr>
+        <td>Phrase:</td><td>{{ the_phrase }}</td>
+    </tr>
+    <tr>
+        <td>Letters:</td><td>{{ the_letters }}</td>
+    </tr>
 </tbody></table>
 
 <p>When "{{ the_phrase }}" is searched for "{{ the_letters }}", the following
